# R-mipolsat

./: DESCRIPTION  NAMESPACE  configure  configure.ac
R/: ch3brefl.R  compareAVHRRchains.R  compareAVHRRimages.R  createAVHRRimage.R  fmcolcat.R  getclassnames.R  milatlon2ucs.R  miucs2latlon.R  plotAVHRRsig.R  plotctval.R  plotfmcol.R  plotsnowsig.R  read123.R  read124.R  readAVHRR.R  readctval.R  readdlidev.R  readfmcol.R  readsig.R  readsnowsig.R  readssidev.R  zzz.R
data/: gshhsmapdata-polstere.RData  gshhsmapdata.RData
man/: compareAVHRRchains.Rd  compareAVHRRimages.Rd  createAVHRRimage.Rd  fm_bidirrefl.Rd  fm_ch3brefl.Rd  fm_esd.Rd  fm_findsollum.Rd  fm_rad2temp.Rd  fm_temp2rad.Rd  getclassnames.Rd  gshhsmapdata-polstere.Rd  gshhsmapdata.Rd  milatlon2ucs.Rd  miucs2latlon.Rd  plotAVHRRsig.Rd  plotctval.Rd  read123.Rd  read124.Rd  readAVHRR.Rd  readctval.Rd  readfmcol.Rd  readsig.Rd  readsnowsig.Rd
src/: Makevars  Makevars.in  checkrec.c  checkrecdli.c  classnames.c  read123.c  read124.c  readctval.c  readctval.h  readdata.c  readdata.h  readdlidev.c  readdlidev.h  readfmcol.h  readheader.c  readsig.c  readsnowsig.c  readssidev.c
